# simetry

./: Cargo.toml  README.md  build.rs
examples/: assetto_corsa_competizione_get_data.rs  assetto_corsa_competizione_rev_and_speed.rs  assetto_corsa_get_data.rs  assetto_corsa_rev_and_speed.rs  iracing_data_retrieval.rs  iracing_disk_data.rs  iracing_rev_and_speed.rs  iracing_run_command.rs  iracing_variables.rs  query_truck_simulator_json.rs  query_truck_simulator_shared_memory.rs  raceroom_get_data.rs  rfactor_2_rev_and_speed.rs
src/: lib.rs  linux_util.rs  windows_util.rs
src/assetto_corsa/: util.rs
src/assetto_corsa_competizione/: data.rs  shared_memory_data.rs
src/iracing/: client.rs
src/iracing/commands/: mod.rs
src/raceroom_racing_experience/: mod.rs  r3e.h
src/truck_simulator/scs-sdk-plugin/: scs-telemetry-common.hpp
