[package]
name = "simetry"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/adnanademovic/simetry"
description = "Interface with telemetry of various racing and driving sims"
version = "0.2.2"
build = "build.rs"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
byteorder = "1.5.0"
once_cell = "1.19.0"
yaml-rust = "0.4.5"
bitmask = "0.5.0"
itertools = "0.12.1"
typename = "0.1.2"
log = "0.4.20"
uom = { version = "0.35.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
hyper = { version = "0.14.25", features = ["client", "http1", "http2", "tcp"] }
time = { version = "0.3.34", features = ["serde-human-readable"] }

[features]
unstable_generic_http_client = []

[dependencies.tokio]
version = "1.36.0"
features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "time",
]

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
bindgen = "0.69.4"
